Revision history for Perl extension Encode::ZapCP1252

0.03

0.02  2008-05-02T04:50:04
      - Fixed documentation typo.
      - Added the "configure_requires", and "recommends" parameters to
        Build.PL.
      - Fixed compatibility issue with Perl 5.6.2.

0.01  2005-10-04T23:20:26
      - Initial public release.